--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon_152x152.png">
 
 <!-- Title -->
-<title>Ja - Advanced Personal Resume / CV vCard Template</title>
+<title>Dhruv Bhavsar - Full Stack Developer of Android and PHP</title>
 
 <!-- CSS Plugins -->
 <link rel="stylesheet" href="assets/plugins/bootstrap/dist/css/bootstrap.min.css" />
@@ -74,7 +74,7 @@
             <div class="container-wide" data-local-scroll>
                 <div class="row align-items-center">
                     <div class="col-xl-7 col-10">
-                        <h1 class="mb-0"><span class="typing">Hi! I’m <strong>Marcus Nowak</strong> - experienced Front-End Developer from Poland…</span><a href="#resume" class="btn-go show-after-typing ml-4"><i class="fa fa-angle-down"></i></a></h1>
+                        <h1 class="mb-0"><span class="typing">Hi! I’m <strong>Dhruv Bhavsar</strong> - experienced Developer from India.</span><a href="#resume" class="btn-go show-after-typing ml-4"><i class="fa fa-angle-down"></i></a></h1>
                     </div>
                 </div>
             </div>
@@ -141,8 +141,8 @@
                 </div>
                 <!-- Resume - About -->
                 <div class="resume-box">
-                    <p class="lead text-lg">I am 25 years old front-end developer from Nowy Sacz in Poland - in the busienss since 2008!</p>
-                    <p class="lead mb-5">Through my 5 years of my career I have been working for over 500 clients from all over the World. My speciality is webdesign and Angular development. I guarentee great communication and quick turnaround.</p>
+                    <p class="lead text-lg">I am 26 years old PHP(Codeigniter and Laravel) and Android developer from Gandhinagar,Gujarat in India</p>
+                    <p class="lead mb-5">Through my 4 years of my career I have been working for over 75 Projects from all over the World. My speciality is Web development and Android Application Development. I guarentee great communication and quick turnaround.</p>
                 </div>
                 <!-- Resume - Skills -->
                 <div class="resume-box image-edge row">
@@ -155,38 +155,38 @@
                         <!-- Progress Bar -->
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                                <span>95%</span>
+                                <span>80%</span>
                             </div>
                         </div>
                         <h6 class="mb-4">HTML &amp; CSS</h6>
                         <!-- Progress Bar -->
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                <span>80%</span>
+                                <span>90%</span>
                             </div>
                         </div>
-                        <h6 class="mb-4">LESS / SASS</h6>
+                        <h6 class="mb-4">PHP(Codeigniter and Laravel)</h6>
                         <!-- Progress Bar -->
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                                <span>85%</span>
+                                <span>75%</span>
                             </div>
                         </div>
-                        <h6 class="mb-4">JavaScript</h6>
+                        <h6 class="mb-4">Android </h6>
                         <!-- Progress Bar -->
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                                 <span>75%</span>
                             </div>
                         </div>
-                        <h6 class="mb-4">AngularJS</h6>
+                        <h6 class="mb-4">Javascript</h6>
                         <!-- Progress Bar -->
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100">
                                 <span>65%</span>
                             </div>
                         </div>
-                        <h6 class="mb-4">Webpack</h6>
+                        <h6 class="mb-4">Wordpress</h6>
                     </div>
                 </div>
                 <!-- Resume - Education & Jobs -->
@@ -207,38 +207,38 @@
                                 <!-- Timeline Event -->
                                 <div class="timeline-event">
                                     <div class="timeline-event-point"></div>
-                                    <div class="timeline-event-date">10.2011 - 09.2014</div>
+                                    <div class="timeline-event-date">06.2010 - 06.2014</div>
                                     <div class="timeline-event-content">
-                                        <h5 class="timeline-event-title">IT Engineer</h5>
-                                        <span class="timeline-event-caption text-muted">University of Oxford</span>
+                                        <h5 class="timeline-event-title">Computer Engineer</h5>
+                                        <span class="timeline-event-caption text-muted">Gujarat Technological University.</span>
                                     </div>
                                 </div>
                                 <!-- Timeline Event -->
                                 <div class="timeline-event">
                                     <div class="timeline-event-point"></div>
-                                    <div class="timeline-event-date">11.2014 - 09.2016</div>
+                                    <div class="timeline-event-date">08.2014 - 01.2015</div>
                                     <div class="timeline-event-content">
-                                        <h5 class="timeline-event-title">Webdesigner &amp; Front-End Developer</h5>
-                                        <span class="timeline-event-caption text-muted">Freelancer</span>
+                                        <h5 class="timeline-event-title">Junior PHP(M.V.C,CI) and Wordpress Developer</h5>
+                                        <span class="timeline-event-caption text-muted">Anthesis Technologies</span>
                                     </div>
                                 </div>
                                 <!-- Timeline Event -->
                                 <div class="timeline-event">
                                     <div class="timeline-event-point"></div>
-                                    <div class="timeline-event-date">09.2016 - 04.2017</div>
+                                    <div class="timeline-event-date">02.2015 - 01.2016</div>
                                     <div class="timeline-event-content">
                                         <img src="assets/img/logotypes/envato.svg" width="90" class="mb-4" alt="">
-                                        <h5 class="timeline-event-title">Junior Front-End Developer</h5>
-                                        <span class="timeline-event-caption text-muted">Company Ltd.</span>
+                                        <h5 class="timeline-event-title">Senior PHP(CI,Laravel) and Android Developer</h5>
+                                        <span class="timeline-event-caption text-muted">Anthesis Technologies.</span>
                                     </div>
                                 </div>
                                 <!-- Timeline Event -->
                                 <div class="timeline-event">
                                     <div class="timeline-event-point"></div>
-                                    <div class="timeline-event-date">04.2017 - </div>
+                                    <div class="timeline-event-date">02.2016 - Present</div>
                                     <div class="timeline-event-content">
-                                        <h5 class="timeline-event-title">Senior Front-End Developer</h5>
-                                        <span class="timeline-event-caption text-muted">Company Inc.</span>
+                                        <h5 class="timeline-event-title">Project Manager</h5>
+                                        <span class="timeline-event-caption text-muted">Anthesis Technologies.</span>
                                     </div>
                                 </div>
                             </div>
@@ -259,8 +259,8 @@
                                 <div class="single-chart">
                                     <div class="chart" data-bar-color="#35A4F0" data-track-color="#EEEEEE" data-percent="100">
                                         <div class="chart-content">
-                                            <span class="value"><span>5</span>/5</span>
-                                            <h6 class="title">Polish</h6>
+                                            <span class="value"><span>4</span>/5</span>
+                                            <h6 class="title">Englisg</h6>
                                         </div>
                                     </div>
                                 </div>
@@ -270,8 +270,8 @@
                                 <div class="single-chart">
                                     <div class="chart" data-bar-color="#35A4F0" data-track-color="#EEEEEE" data-percent="80">
                                         <div class="chart-content">
-                                            <span class="value"><span>4</span>/5</span>
-                                            <h6 class="title">English</h6>
+                                            <span class="value"><span>5</span>/5</span>
+                                            <h6 class="title">Gujarati</h6>
                                         </div>
                                     </div>
                                 </div>
@@ -281,23 +281,13 @@
                                 <div class="single-chart">
                                     <div class="chart" data-bar-color="#35A4F0" data-track-color="#EEEEEE" data-percent="40">
                                         <div class="chart-content">
-                                            <span class="value"><span>2</span>/5</span>
-                                            <h6 class="title">German</h6>
+                                            <span class="value"><span>4</span>/5</span>
+                                            <h6 class="title">Hindi</h6>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <!-- Chart -->
-                                <div class="single-chart">
-                                    <div class="chart" data-bar-color="#35A4F0" data-track-color="#EEEEEE" data-percent="20">
-                                        <div class="chart-content">
-                                            <span class="value"><span>1</span>/5</span>
-                                            <h6 class="title">Spanish</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                           
                         </div>
                     </div>
                 </div>
@@ -409,8 +399,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <h2 class="display-4">PSD to HTML</h2>
-                                <p class="lead text-muted">Quick and proffesional HTML5 and CSS3 conversion based on current trends.</p>
+                                <h2 class="display-4">Android App development</h2>
+                                <p class="lead text-muted">Quick and proffesional Android App development based on current trends and your requirements.</p>
                                 <a href="#pricing" class="btn btn-primary">Details &amp; Pricing</a>
                             </div>
                         </div>
@@ -421,8 +411,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <h2 class="display-4">HTML to WordPress</h2>
-                                <p class="lead text-muted">Quick and proffesional HTML5 and CSS3 conversion based on current trends.</p>
+                                <h2 class="display-4">Website Development</h2>
+                                <p class="lead text-muted">Quick and proffesional Website development based  your requirements.</p>
                                 <a href="#pricing" class="btn btn-primary">Details &amp; Pricing</a>
                             </div>
                         </div>
@@ -433,8 +423,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-6">
-                                <h2 class="display-4">AngularJS Development</h2>
-                                <p class="lead text-muted">Quick and proffesional HTML5 and CSS3 conversion based on current trends.</p>
+                                <h2 class="display-4">Web Application Development</h2>
+                                <p class="lead text-muted">Quick and proffesional Web Application development based  your requirements.</p>
                                 <a href="#pricing" class="btn btn-primary">Details &amp; Pricing</a>
                             </div>
                         </div>
@@ -896,24 +886,24 @@
                     <div class="col-md-4">
                         <h6 class="text-muted mb-2">Address:</h6>
                         <address class="lead">
-                            1111-A Nowhere Lane,<br>
-                            Outta Sight,<br>
-                            State 90378, USA
+                           Gandhinagar,<br>
+                            Gujarat,<br>
+                            India.
                         </address>
                     </div>
                     <div class="col-md-4">
                         <h6 class="text-muted mb-2">E-mail:</h6>
-                        <p class="mb-5"><a href="#" class="lead link-inherit">example@mail.com</a></p>
+                        <p class="mb-5"><a href="#" class="lead link-inherit">dhruv@anthesis.in</a></p>
                         <h6 class="text-muted mb-2">Phone:</h6>
-                        <a href="#" class="lead link-inherit">+48 599 102 000</a>
+                        <a href="#" class="lead link-inherit">+91-9913130690</a>
                     </div>
                     <div class="col-md-4">
                         <h6 class="text-muted mb-2">Skype:</h6>
-                        <p class="mb-5"><a href="#" class="lead link-inherit">example.username</a></p>
+                        <p class="mb-5"><a href="#" class="lead link-inherit">dhruv@anthesis.in</a></p>
                         <h6 class="text-muted mb-2">Find me on:</h6>
-                        <a href="https://www.facebook.com/suelopl/" target="_blank" class="icon icon-circle icon-hover icon-sm icon-facebook"><i class="fa fa-facebook"></i></a>
-                        <a href="https://twitter.com/suelopl" target="_blank" class="icon icon-circle icon-hover icon-sm icon-twitter"><i class="fa fa-twitter"></i></a>
-                        <a href="https://www.linkedin.com/in/piotr-osmoła-2b69ba59/" target="_blank" class="icon icon-circle icon-hover icon-sm icon-linkedin"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/Dhruv.Bhavsar1" target="_blank" class="icon icon-circle icon-hover icon-sm icon-facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/Dhruv.Bhavsar1" target="_blank" class="icon icon-circle icon-hover icon-sm icon-twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/dhruv-bhavsar-69291058/" target="_blank" class="icon icon-circle icon-hover icon-sm icon-linkedin"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -935,11 +925,11 @@
                     <a href="#" class="btn btn-primary btn-sm">Download my CV</a>
                 </div>
                 <div class="spread-icons col-md-6 text-center text-md-right">
-                    <a href="https://www.facebook.com/suelopl/" target="_blank" class="icon icon-sm icon-white icon-hover"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/Dhruv.Bhavsar1/" target="_blank" class="icon icon-sm icon-white icon-hover"><i class="fa fa-facebook"></i></a>
                     <a href="https://twitter.com/suelopl" target="_blank" class="icon icon-sm icon-white icon-hover"><i class="fa fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/in/piotr-osmoła-2b69ba59/" target="_blank" class="icon icon-sm icon-white icon-hover"><i class="fa fa-linkedin"></i></a>
-                    <p class="text-muted mt-3 mb-0">Copyright Johnatan Doe 2017©. <br>
-                    Made with love by <a href="http://suelo.pl" target="_blank" class="link-inherit">Suelo</a>.</p>
+                    <a href="https://www.linkedin.com/in/dhruv-bhavsar-69291058/" target="_blank" class="icon icon-sm icon-white icon-hover"><i class="fa fa-linkedin"></i></a>
+                    <p class="text-muted mt-3 mb-0">Copyright Dhruv Bhavsar 2018©. <br>
+                    </p>
                 </div>
             </div>
         </div>
