--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- CSS Icons -->
 <link rel="stylesheet" href="assets/css/themify-icons.css" />
-<link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 <!-- CSS Base -->
 <link id="theme" rel="stylesheet" href="assets/css/themes/theme-blue.min.css" />
