--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
     <section id="contact" class="section section-contact fullheight bg-dark dark" data-scheme="dark">
 
         <!-- BG Map -->
-        <div id="google-map" class="bg-map bg-map-overlay dark" data-latitude="40.758895" data-longitude="-73.985131"></div>
+        <div id="google-map" class="bg-map bg-map-overlay dark" data-latitude="23.2156354" data-longitude="72.63694149999992"></div>
     
         <!-- Section Content -->
         <div class="section-content pos-v-center">
@@ -876,7 +876,7 @@
                             </div>
                             <div class="module">
                                 <span class="mr-2">Have a question?</span>
-                                <a href="mailto:example@mail.com" class="btn btn-primary btn-sm">Write to me!</a>
+                                <a href="mailto:dhruv@anthesis.in" class="btn btn-primary btn-sm">Write to me!</a>
                             </div>
                         </div>
                     </div>
@@ -998,7 +998,7 @@
 <script src="assets/plugins/isotope-layout/dist/isotope.pkgd.min.js"></script>
 
 <!-- JS Google Map -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRMEkSrFLFkLKHyLVwT0DLLTqcUhUUZdM"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBq9Hw763vQdvCpgW33LtJlynneqRPezRw"></script>
 
 <!-- JS Core -->
 <script src="assets/js/core.js"></script>
